# FEMOC

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  HHJ_implementation.txt  Makefile  READ.md  README.md  cmake_install.cmake  compile_commands.json  git  git.pub  main  main.cc
.cache/clangd/index/: main.cc.F14E2197976BC09D.idx
practice_problems/: CMakeLists.txt  Makefile  cmake_install.cmake  p1.cc
practice_problems/HM_Biharmonic/: CMakeLists.txt  HM_Biharmonic.cc
practice_problems/p1/: CMakeLists.txt  Makefile  cmake_install.cmake  p1.cc
practice_problems/p10/: .p10.cc.kate-swp  CMakeLists.txt  p10.cc
practice_problems/p11/: .p11.cc.kate-swp  CMakeLists.txt  Makefile  cmake_install.cmake  p11.cc
practice_problems/p12/: CMakeLists.txt  p12.cc
practice_problems/p2/: CMakeLists.txt  Makefile  cmake_install.cmake  p2.cc
practice_problems/p3/: CMakeLists.txt  Makefile  cmake_install.cmake  p3.cc
practice_problems/p4/: CMakeLists.txt  Makefile  cmake_install.cmake  p4.cc
practice_problems/p5/: CMakeLists.txt  Makefile  cmake_install.cmake  p5.cc
practice_problems/p6/: CMakeLists.txt  Makefile  cmake_install.cmake  p6.cc  triangle.h
practice_problems/p7/: CMakeLists.txt  Makefile  cmake_install.cmake  p7.cc
practice_problems/p8/: CMakeLists.txt  p8.cc  p8.h
practice_problems/p9/: CMakeLists.txt  p9.cc
