# Set the minimum required version of CMake
CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

# Add subdirectories for each problem (p1 and p2)
ADD_SUBDIRECTORY(p1)
ADD_SUBDIRECTORY(p2)
ADD_SUBDIRECTORY(p3)
ADD_SUBDIRECTORY(p4)
ADD_SUBDIRECTORY(p5)
ADD_SUBDIRECTORY(p6)
ADD_SUBDIRECTORY(p7)
ADD_SUBDIRECTORY(p8)
ADD_SUBDIRECTORY(p9)
ADD_SUBDIRECTORY(p10)
ADD_SUBDIRECTORY(p11)


